--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,15 @@ python = "^3.9"
 fastapi = "^0.100.0"
 uvicorn = { version = "^0.22.0", extras = ["standard"] }
 gunicorn = "^21.2.0"
-pydantic = { version = "^1", extras=["dotenv"] }
+pydantic = { version = "^1", extras = ["dotenv"] }
 yarl = "^1.9.2"
 ujson = "^5.8.0"
-SQLAlchemy = {version = "^2.0.18", extras = ["asyncio"]}
+SQLAlchemy = {extras = ["mypy"], version = "^2.0.21"}
 alembic = "^1.11.1"
-asyncpg = {version = "^0.28.0", extras = ["sa"]}
+asyncpg = { version = "^0.28.0", extras = ["sa"] }
 httptools = "^0.6.0"
+python-multipart = "^0.0.6"
+greenlet = "^3.0.0"
 
 
 [tool.poetry.dev-dependencies]
@@ -41,9 +43,10 @@ httpx = "^0.23.3"
 [tool.isort]
 profile = "black"
 multi_line_output = 3
-src_paths = ["ct_ws",]
+src_paths = ["ct_ws", ]
 
 [tool.mypy]
+plugins = ["sqlalchemy.ext.mypy.plugin"]
 strict = true
 ignore_missing_imports = true
 allow_subclassing_any = true
@@ -55,6 +58,7 @@ allow_untyped_decorators = true
 warn_unused_ignores = false
 warn_return_any = false
 namespace_packages = true
+
 
 [tool.pytest.ini_options]
 filterwarnings = [
