--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: ./deploy/Dockerfile
       target: prod
     image: ct_ws:${CT_WS_VERSION:-latest}
+    ports:
+    - "8001:8000"
     restart: always
     env_file:
     - .env
